RESOLVED FIXED275198
[WebGPU] GPUBindGroup can surprisingly be garbage collected
https://bugs.webkit.org/show_bug.cgi?id=275198
Summary [WebGPU] GPUBindGroup can surprisingly be garbage collected
Mike Wyrzykowski
Reported 2024-06-05 22:46:33 PDT
[WebGPU] GPUBindGroup can surprisingly be garbage collected
Attachments
Mike Wyrzykowski
Comment 1 2024-06-05 22:46:42 PDT
Mike Wyrzykowski
Comment 2 2024-06-05 22:59:30 PDT
EWS
Comment 3 2024-06-06 23:27:03 PDT
Committed 279796@main (60684f4b340f): <https://commits.webkit.org/279796@main> Reviewed commits have been landed. Closing PR #29572 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.