[WebGPU] GPUBindGroup can surprisingly be garbage collected https://bugs.webkit.org/show_bug.cgi?id=275198 <radar://129272402>

Reviewed by Dan Glastonbury.

We should hold a RefPtr and not a WeakPtr since a GC which occurs in the middle
of an encoder can result in the pipeline's ref count reaching zero.

There is not a risk of a retain cycle as the *Encoders are not retained by
any other objects.

* LayoutTests/fast/webgpu/regression/repro_275198-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_275198.html: Added.
* LayoutTests/fast/webgpu/regression/repro_275198b-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_275198b.html: Added.
* Source/WebGPU/WebGPU/ComputePassEncoder.h:
* Source/WebGPU/WebGPU/ComputePassEncoder.mm:
(WebGPU::ComputePassEncoder::setBindGroup):
* Source/WebGPU/WebGPU/PipelineLayout.h:
* Source/WebGPU/WebGPU/RenderBundleEncoder.h:
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::setBindGroup):
* Source/WebGPU/WebGPU/RenderPassEncoder.h:
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::setBindGroup):

Canonical link: https://commits.webkit.org/279796@main