Source/WebGPU/WebGPU/ComputePassEncoder.mm
@@ -449,7 +449,7 @@ void ComputePassEncoder::setBindGroup(uint32_t groupIndex, const BindGroup& grou
     }
 
     m_bindGroupResources.set(groupIndex, resourceList);
-    m_bindGroups.set(groupIndex, group);
+    m_bindGroups.set(groupIndex, &group);
 }
 
 void ComputePassEncoder::setPipeline(const ComputePipeline& pipeline)
